force-app/main/default/objects/Billing_Events_Queue__e/Billing_Events_Queue__e.object-meta.xml
<CustomObject>
    <label>Billing Events Queue</label>
    <pluralLabel>Billing Events Queues</pluralLabel>
</CustomObject>