force-app/main/default/objects/Billing_Events_Queue__e/fields/Billing_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Id__c</fullName>
    <description>The Billing Account Id or the Order Line Key from Payments</description>
    <label>Billing Account Id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>