force-app/main/default/objects/Billing_Events_Queue__e/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>The type of event received from Payments, and Flows integrated with this platform event.</description>
    <label>Event</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>