force-app/main/default/objects/Billing_Events_Queue__e/fields/Initiator__c.field-meta.xml
<CustomField>
    <fullName>Initiator__c</fullName>
    <description>The source of this event.

This can be any of the following:
“Payments”
“Dunning”
&lt;RequesterLdap&gt;</description>
    <label>Initiator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>