force-app/main/default/objects/Billing_Events_Queue__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>This field will contain details on the billing event that was published. For example, if Payments/B3 has signaled a change in legal or billing address, the payload will contain the new address. If Payments has signaled a payment has been processed, this payload will indicate if the payment was partial or in full i.e. New Outstanding Balance, or No Outstanding Balance.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>